<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/buttonAddConditionRow"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addConditionRow" />
    <item
        android:id="@+id/buttonAddActionRow"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addActionRow" />
    <item
        android:id="@+id/buttonRuleCount"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/ruleCount" />
    <item
        android:id="@+id/buttonClearTable"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/clearTable" />
</menu>