<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AppInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/appInfoHowTo"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appInfoAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appInfoVersionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/deciseLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/appInfoLogoDescription"
            android:paddingTop="20dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/appInfoAuthorsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/appInfoAuthorsHeading"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appInfoAuthorsNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appInfoAuthorsNames"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/appInfoProjectLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/appInfoProjectLocation"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textColor="@android:color/white"
            android:textColorLink="@color/colorAppInfoHyperlinkBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/appInfoHowTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/white"
        android:onClick="onClickAppInfoHowTo"
        android:text="@string/howToTitle"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>